--- a/resources/reactjs/Dockerfile
+++ b/resources/reactjs/Dockerfile
@@ -1,1 +1,20 @@
-FROM node:lts 
+# FROM node:lts 
+# =========================
+# Build Stage
+# =========================
+FROM node:18-alpine AS build
+
+WORKDIR /app
+COPY . .
+RUN npm install
+RUN npm run build
+
+# =========================
+# Production Stage
+# =========================
+FROM nginx:alpine
+
+COPY --from=build /app/dist /usr/share/nginx/html
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
