--- a/resources/springboot/docker-compose.yml
+++ b/resources/springboot/docker-compose.yml
@@ -1,3 +1,9 @@
+# services:
+#   spring-svc: 
+#     image: gradle:7.9
+
 services:
-  spring-svc: 
-    image: gradle:7.9
+  spring-app:
+    image: ${IMAGE_NAME}:${IMAGE_TAG}
+    ports:
+      - "8080:8080"
