--- a/resources/reactjs/Dockerfile
+++ b/resources/reactjs/Dockerfile
@@ -2,19 +2,49 @@
 # =========================
 # Build Stage
 # =========================
-FROM node:18-alpine AS build
+# FROM node:18-alpine AS build
 
+# WORKDIR /app
+# COPY . .
+# RUN npm install
+# RUN npm run build
+
+# # =========================
+# # Production Stage
+# # =========================
+# FROM nginx:alpine
+
+# COPY --from=build /app/dist /usr/share/nginx/html
+
+# EXPOSE 80
+# CMD ["nginx", "-g", "daemon off;"]
+
+# Stage 1: Build React app
+FROM node:18-alpine AS builder
 WORKDIR /app
-COPY . .
-RUN npm install
+COPY package*.json ./
+RUN npm ci
+COPY src ./src
+COPY public ./public
 RUN npm run build
 
-# =========================
-# Production Stage
-# =========================
-FROM nginx:alpine
+# Stage 2: Nginx for production
+FROM nginx:1.25-alpine
 
-COPY --from=build /app/dist /usr/share/nginx/html
+# Copy custom Nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-EXPOSE 80
+# Copy build output
+COPY --from=builder /app/build /usr/share/nginx/html
+
+# Fix permissions for OpenShift random UID
+RUN chown -R 1001:0 /usr/share/nginx/html \
+    && chmod -R g+rwX /usr/share/nginx/html \
+    && chown -R 1001:0 /var/cache/nginx /var/run /var/log/nginx \
+    && chmod -R g+rwX /var/cache/nginx /var/run /var/log/nginx
+
+# Use non-root user (OpenShift will override UID, but this is good practice)
+USER 1001
+
+EXPOSE 8080
 CMD ["nginx", "-g", "daemon off;"]
