--- a/resources/reactjs/docker-compose.yml
+++ b/resources/reactjs/docker-compose.yml
@@ -18,10 +18,10 @@ services:
     labels: 
       - "traefik.enable=true"
       - "traefik.http.routers.reactjs.tls=true"
-      - "traefik.http.routers.reactjs.rule=Host(`earthdx.devnerd.store`)"
+      # - "traefik.http.routers.reactjs.rule=Host(`earthdx.devnerd.store`)"
       - "traefik.http.routers.reactjs.entrypoints=web,websecure"
       - "traefik.http.routers.reactjs.tls.certresolver=letsencrypt"
-      # - "traefik.http.services.reactjs.loadbalancer.server.port=3000"
+      - "traefik.http.services.reactjs.loadbalancer.server.port=3000"
     networks: 
       - proxy
 networks: 
